Made small fix for header on mobile viewing

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,11 @@ small{
 p{
 	text-indent: 2em;
 }
+
+p>a{
+	color:black;
+}
+p > a:hover{
+	color: black;
+	text-decoration: none;
+}
